gccida/g2/get_attr_pent_pair
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:18839:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair  get_attr_pent_pair( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:18864:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:18866:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 19258, "get_attr_pent_pair"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:18866:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 19258, "get_attr_pent_pair"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19012:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19047:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || !symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19049:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || !symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19055:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19084:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( aligned_operand( recog_data_0.operand[1], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19144:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19159:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19161:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19170:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19200:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19212:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19232:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v9 = incdec_operand( recog_data_0.operand[2], HImode) == 0; 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19236:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19245:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !incdec_operand( recog_data_0.operand[2], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/insn-attrtab.c:19250:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_pent_pair/src/obj/insn-attrtab.o] Error 1
